--- a/app/styles/layout/_structure.scss
+++ b/app/styles/layout/_structure.scss
@@ -1,4 +1,15 @@
-body {
-  background: url("../images/breeze2.jpg") no-repeat center / cover;
-  min-height: 100vh;
+// body {
+//   background: url("../images/breeze2.jpg") no-repeat center / cover;
+//   min-height: 100vh;
+// }
+@import "../helpers/varriables";
+
+.wrapper {
+  max-width: $wrapper;
+  margin: 0 auto;
+}
+.container {
+  max-width: $container + 30px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
