--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,1 +1,8 @@
-@import "layout/structure";
+@import "./layout/structure";
+
+@import "./base/typography";
+
+@import "./helpers/global";
+@import "./helpers/varriables";
+
+@import "./layout/structure";
