--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -54,10 +54,8 @@
     position: relative;
     &::after {
       content: "";
-      position: absolute;
       bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
+      @include absoluteCenter();
       width: 6rem;
       height: 0.5rem;
       background-color: white;
