--- a/app/views/blocks/header.pug
+++ b/app/views/blocks/header.pug
@@ -1,39 +1,27 @@
 header.header 
-  .container 
-    .header-top
-      a.header-logo(href="index.html") MoGo
-      i.fa.fa-bars.header-toggle
-      ul.header-menu
-        li.header-menu-item
-          a.header-menu-link(href="#") About
-        li.header-menu-item
-          a.header-menu-link(href="#") Service
-        li.header-menu-item
-          a.header-menu-link(href="#") Work
-        li.header-menu-item
-          a.header-menu-link(href="#") Blog
-        li.header-menu-item
-          a.header-menu-link(href="#") Contact
-        li.header-menu-item
-          a.header-menu-icon(href="#") 
-            i.fa.fa-shopping-cart
-        li.header-menu-item
-          a.header-menu-icon(href="#") 
-            i.fa.fa-search
-    .header-content  
-      h2.header-content-caption Create Template
-      h1.header-content-main Welcome to mogo
-      a.header-content-more(href="#") Learn more
-    .header-bottom
-      .header-bottom-item.is-active 
-        span.header-bottom-number 01
-        span.header-bottom-text Intro
-      .header-bottom-item  
-        span.header-bottom-number 02
-        span.header-bottom-text Work
-      .header-bottom-item  
-        span.header-bottom-number 03
-        span.header-bottom-text About
-      .header-bottom-item  
-        span.header-bottom-number 04
-        span.header-bottom-text Contacts
+	.container 
+		.header-top
+			a.header-logo(href="index.html") MoGo
+			i.fa.fa-bars.header-toggle
+			ul.header-menu
+				//- goi mixin
+				+menuLink("About")
+				+menuLink("Service")
+				+menuLink("Work")
+				+menuLink("Blog")
+				+menuLink("Contact")
+				li.header-menu-item
+					a.header-menu-icon(href="#") 
+						i.fa.fa-shopping-cart
+				li.header-menu-item
+					a.header-menu-icon(href="#") 
+						i.fa.fa-search
+		.header-content  
+			h2.header-content-caption Create Template
+			h1.header-content-main Welcome to mogo
+			a.header-content-more(href="#") Learn more
+		.header-bottom
+			+headerBottomItem("01", "Intro")
+			+headerBottomItem("02", "Work")
+			+headerBottomItem("03", "About")
+			+headerBottomItem("04", "Contacts")
