--- a/app/styles/layout/_about.scss
+++ b/app/styles/layout/_about.scss
@@ -20,7 +20,7 @@
   }
   &-item {
     position: relative;
-    z-index: 1;
+    // z-index: 1;
     transition: all 0.25s linear;
   }
   &-item:hover {
@@ -59,6 +59,8 @@
     justify-content: center;
     flex-direction: column;
     text-transform: uppercase;
+    text-align: center;
+    padding: 2rem;
   }
   &-icon {
     font-size: 1.8rem;
@@ -67,6 +69,8 @@
   &-title {
     font-weight: bold;
     font-size: 1.8rem;
+    line-height: 1.4;
+    @include textClamp;
   }
   @include maxWidth(767px) {
     padding-top: 5rem;
@@ -78,8 +82,18 @@
     // }
     // CSS Grid responsive about-list
     &-list {
-      grid-template-columns: 100%;
+      grid-auto-columns: 80%;
+      grid-auto-flow: column;
+      grid-template-columns: unset;
       grid-row-gap: 2.5rem;
+      overflow-x: auto;
+      padding: 1rem;
+      scroll-snap-type: x mandatory;
+      scroll-snap-stop: always;
+      @include hideScroll;
+    }
+    &-item {
+      scroll-snap-align: start;
     }
   }
 }
