--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -363,3 +363,61 @@ body {
     grid-row-gap: 2.5rem;
   }
 }
+
+.number {
+  background-color: #95e1d3;
+}
+.number-list {
+  display: flex;
+  align-items: stretch;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.number-item {
+  padding: 8.5rem 3.5rem;
+  color: white;
+  border-left: 1px solid white;
+  text-align: center;
+  text-transform: uppercase;
+  width: 20%;
+}
+.number-item:last-child {
+  border-right: 1px solid white;
+}
+.number-item-count {
+  font-size: 7.2rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+.number-item-text {
+  line-height: 1.4;
+}
+@media screen and (max-width: 1023px) {
+  .number-item {
+    padding: 5rem 1.5rem;
+  }
+  .number-item-count {
+    font-size: 5rem;
+    margin-bottom: 1rem;
+  }
+  .number-item-text {
+    font-size: 1.4rem;
+  }
+}
+@media screen and (max-width: 767px) {
+  .number-list {
+    display: block;
+  }
+  .number-item {
+    width: 100%;
+    border-left: 0;
+    padding: 2.5rem 1.5rem;
+  }
+  .number-item:not(:last-child) {
+    border-bottom: 1px solid white;
+  }
+  .number-item:last-child {
+    border-right: 0;
+  }
+}
