--- a/app/views/layout/layout.pug
+++ b/app/views/layout/layout.pug
@@ -13,7 +13,7 @@ html(lang="en")
 		title= title
 		link(rel="preconnect" href="https://fonts.googleapis.com")
 		link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-		link(href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet")
+		link(href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet")
 		link(rel="stylesheet", href="./styles/reset.css")
 		link(rel="stylesheet", href="./styles/fontawesome.css")
 		link(rel="stylesheet", href="./styles/styles.css")
