--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -4,3 +4,5 @@ block container
     include blocks/about
     include blocks/number
     include blocks/service
+    include blocks/device
+    include blocks/wedo
