--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -9,3 +9,5 @@
 @import "./layout/about";
 @import "./layout/number";
 @import "./layout/service";
+@import "./layout/device";
+@import "./layout/wedo";
