--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -489,3 +489,34 @@ body {
     margin-bottom: 3rem;
   }
 }
+
+.device {
+  padding-top: 11rem;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.6)), url("../images/img-device-bg.png") no-repeat center/cover;
+}
+.device-image {
+  margin: 0 auto -9.3rem;
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+@media screen and (max-width: 767px) {
+  .device {
+    padding-top: 5rem;
+  }
+  .device-image {
+    max-width: 80%;
+    margin-bottom: -4.6rem;
+  }
+}
+@media screen and (max-width: 413px) {
+  .device-image {
+    max-width: 80%;
+    margin-bottom: -4.2rem;
+  }
+}
+
+.wedo {
+  padding: 10rem;
+}
