--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -609,3 +609,105 @@ body {
     margin-bottom: 2rem;
   }
 }
+
+.quote {
+  padding: 6.5rem 0;
+  background-color: #f8f8f8;
+}
+.quote-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.quote-arrow {
+  color: #cccccc;
+  cursor: pointer;
+  font-size: 3rem;
+  padding: 1rem 2rem;
+}
+.quote-content {
+  padding-left: 5.5rem;
+  padding-right: 5.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.quote-icon {
+  width: 15rem;
+  height: 15rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  border: 3px solid #95e1d3;
+  flex-shrink: 0;
+}
+.quote-info {
+  padding-left: 6rem;
+}
+.quote-desc {
+  font-size: 2.5rem;
+  font-weight: 300;
+  line-height: 1.6;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 2.5rem;
+  font-style: italic;
+  color: #999999;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  max-width: 100%;
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+.quote-author {
+  font-family: "Kaushan Script", cursive;
+  font-size: 2.4rem;
+  position: relative;
+  padding-left: 7rem;
+}
+.quote-author::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 6rem;
+  height: 4px;
+  background-color: #e98382;
+  left: 0;
+}
+@media screen and (max-width: 767px) {
+  .quote-arrow {
+    display: none;
+  }
+  .quote-content {
+    padding: 0;
+    flex-direction: column;
+  }
+  .quote-icon {
+    width: 10rem;
+    height: 10rem;
+  }
+  .quote-icon img {
+    max-width: 50%;
+  }
+  .quote-info {
+    padding-left: 0;
+    margin-top: 3rem;
+  }
+  .quote-desc {
+    display: block;
+    font-size: 1.6rem;
+  }
+  .quote-author {
+    font-size: 2rem;
+  }
+}
