--- a/app/views/blocks/mixins.pug
+++ b/app/views/blocks/mixins.pug
@@ -29,3 +29,29 @@ mixin wedoItem(src, title, desc, active="")
 			i.fa.fa-angle-up.wedo-item-arrow
 		.wedo-item-content
 			.wedo-item-text= desc
+
+mixin teamSocial(facebook= "#", twitter= "#", pinterest= "#", instagram= "#")
+	ul.team-social 
+		li.team-social-item
+			a.team-social-link(href=facebook)
+				i.fab.fa-facebook-f
+		li.team-social-item
+			a.team-social-link(href=twitter)
+				i.fab.fa-twitter
+		li.team-social-item
+			a.team-social-link(href=pinterest)
+				i.fab.fa-pinterest
+		li.team-social-item
+			a.team-social-link(href=instagram)
+				i.fab.fa-instagram
+
+mixin teamItem(src="../images/img-team.png", name= "Evon dev", position= "Junior Frontend Developer")
+	.team-item  
+		.team-main
+			img(src=src).team-image
+			.team-content
+				if block 
+					block
+		.team-info
+			h3.team-name= name
+			span.team-position= position
