--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -336,7 +336,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, #e98382, rgba(238, 216, 137, 0.7));
+  background: linear-gradient(to bottom, rgba(233, 131, 130, 0.8), rgba(238, 216, 137, 0.8));
   z-index: 2;
   color: white;
   display: flex;
@@ -710,4 +710,178 @@ body {
   .quote-author {
     font-size: 2rem;
   }
+}
+
+.team {
+  background-color: #fff;
+  padding: 10rem 0;
+  --image-height: 47rem;
+}
+.team-list {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.team-item {
+  width: calc(33.33% - 2rem);
+}
+.team-image {
+  width: 100%;
+  height: var(--image-height);
+  object-fit: cover;
+}
+.team-info {
+  padding: 3rem 1.5rem;
+  text-align: center;
+  height: calc(100% - var(--image-height));
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+.team-name {
+  text-transform: uppercase;
+  margin-bottom: 1.5rem;
+  font-weight: 500;
+  line-height: 1.4;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  max-width: 100%;
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+.team-position {
+  font-size: 1.5rem;
+  font-weight: 300;
+  font-style: italic;
+  color: #999999;
+}
+.team-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.team-social-item:not(:first-child) {
+  border-left: 1px solid #e98382;
+}
+.team-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 6rem;
+  height: 6rem;
+  background-color: #eed889;
+  color: #e98382;
+  font-size: 2rem;
+  transition: all 0.25s ease;
+}
+.team-social-link:hover {
+  background-color: #e98382;
+  color: white;
+}
+@media screen and (max-width: 1023px) {
+  .team {
+    padding: 5rem 0;
+  }
+  .team-list {
+    display: grid !important;
+    justify-content: flex-start !important;
+    grid-auto-columns: 55%;
+    grid-auto-flow: column;
+    grid-template-columns: unset;
+    grid-column-gap: 2.5rem;
+    overflow-x: auto;
+    padding: 1rem;
+    scroll-snap-type: x mandatory;
+    scroll-snap-stop: always;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .team-list::-webkit-scrollbar {
+    display: none;
+  }
+  .team-list > * {
+    scroll-snap-align: center;
+    width: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .team {
+    --image-height: 40rem;
+  }
+  .team-list {
+    display: grid !important;
+    justify-content: flex-start !important;
+    grid-auto-columns: 90%;
+    grid-auto-flow: column;
+    grid-template-columns: unset;
+    grid-column-gap: 2.5rem;
+    overflow-x: auto;
+    padding: 1rem;
+    scroll-snap-type: x mandatory;
+    scroll-snap-stop: always;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .team-list::-webkit-scrollbar {
+    display: none;
+  }
+  .team-list > * {
+    scroll-snap-align: center;
+    width: auto;
+  }
+}
+
+.team-main {
+  position: relative;
+  z-index: 1;
+}
+.team-main > * {
+  transition: transform 0.25s linear;
+  will-change: transform;
+}
+.team-main .team-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.25s linear;
+  background: linear-gradient(to bottom, rgba(233, 131, 130, 0.8), rgba(238, 216, 137, 0.8));
+  z-index: 2;
+}
+.team-main:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #95e1d3;
+  z-index: -1;
+}
+.team-main:hover .team-content {
+  opacity: 1;
+  visibility: visible;
+}
+.team-main:hover > * {
+  transform: translate(-1rem, -1rem);
 }
