--- a/app/views/blocks/team.pug
+++ b/app/views/blocks/team.pug
@@ -8,3 +8,7 @@ section.team
                 +teamSocial("#chris")
             +teamItem("./images/img-team3.png", "Michael Fertig", "Developer")
                 +teamSocial("#hand")
+
+section.brand 
+    .container  
+        img(src="../images/img-logos.png" alt="brands")
