--- a/app/styles/layout/_team.scss
+++ b/app/styles/layout/_team.scss
@@ -62,4 +62,11 @@
     }
   }
 }
+.brand {
+  padding: 8rem 0;
+  @include bg($gray-color);
+  @include maxWidth(767px) {
+    padding: 3rem 0;
+  }
+}
 @include hoverEffect(".team-main", ".team-content");
