--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "./helpers/varriables";
 @import "./base/typography";
 
 @import "./helpers/varriables";
@@ -13,3 +14,4 @@
 @import "./layout/wedo";
 @import "./layout/quote";
 @import "./layout/team";
+@import "./layout/work";
