--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,6 +3,20 @@ html {
   box-sizing: border-box;
 }
 
+.text {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  font-style: italic;
+}
+
+.text--light {
+  font-weight: 300;
+}
+
+.text--normal {
+  font-style: normal;
+}
+
 a {
   text-decoration: none;
 }
@@ -894,4 +908,152 @@ body {
 }
 .team-main:hover > * {
   transform: translate(-1rem, -1rem);
+}
+
+.work {
+  padding-top: 10rem;
+}
+.work-list {
+  display: flex;
+  align-items: stretch;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.work-column {
+  width: 25%;
+}
+.work-content {
+  color: white;
+  text-align: center;
+  padding: 1.5rem;
+}
+.work-icon {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+.work-title {
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  line-height: 1.6;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  max-width: 100%;
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+.work-desc {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 300;
+  font-style: italic;
+}
+.work-image {
+  width: 100%;
+  height: 100%;
+}
+.work-item {
+  height: 50%;
+}
+.work-item--full {
+  height: 100%;
+}
+@media screen and (max-width: 1600px) {
+  .work-list {
+    height: 60rem;
+  }
+}
+@media screen and (max-width: 1279px) {
+  .work-list {
+    flex-wrap: wrap;
+    overflow: hidden;
+    height: auto;
+  }
+  .work-column {
+    width: 50%;
+  }
+  .work-item {
+    height: 42rem;
+  }
+  .work-item--full {
+    height: 84rem;
+  }
+}
+@media screen and (max-width: 767px) {
+  .work-column {
+    width: 100%;
+  }
+  .work-item, .work-item--full {
+    height: auto;
+  }
+}
+
+.work-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 30rem;
+  grid-template-areas: "h1 h3 h5 h6" "h2 h4 h5 h7";
+}
+.work-grid .work-item {
+  height: 100% !important;
+}
+.work-grid .work-item:first-child {
+  grid-area: h1;
+}
+.work-grid .work-item:last-child {
+  grid-area: h7;
+}
+.work-grid .work-item:nth-child(2) {
+  grid-area: h2;
+}
+.work-grid .work-item:nth-child(3) {
+  grid-area: h3;
+}
+.work-grid .work-item:nth-child(4) {
+  grid-area: h4;
+}
+.work-grid .work-item:nth-child(5) {
+  grid-area: h5;
+}
+.work-grid .work-item:nth-child(6) {
+  grid-area: h6;
+}
+@media screen and (max-width: 767px) {
+  .work-grid {
+    display: block;
+  }
+}
+
+.work-item {
+  position: relative;
+  z-index: 1;
+}
+.work-item > * {
+  transition: transform 0.25s linear;
+  will-change: transform;
+}
+.work-item .work-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.25s linear;
+  background: linear-gradient(to bottom, rgba(233, 131, 130, 0.8), rgba(238, 216, 137, 0.8));
+  z-index: 2;
+}
+.work-item:hover .work-content {
+  opacity: 1;
+  visibility: visible;
 }
