--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -995,7 +995,7 @@ body {
 .work-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 30rem;
+  grid-template-rows: 30rem 30rem;
   grid-template-areas: "h1 h3 h5 h6" "h2 h4 h5 h7";
 }
 .work-grid .work-item {
