--- a/app/styles/layout/_work.scss
+++ b/app/styles/layout/_work.scss
@@ -36,6 +36,9 @@
   &-item--full {
     height: 100%;
   }
+  &-desc {
+    color: white;
+  }
   @include maxWidth(1600px) {
     &-list {
       height: 60rem;
