--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -7,6 +7,8 @@ html {
   font-family: $secondary-font;
   font-size: 1.5rem;
   font-style: italic;
+  color: $text-color;
+  line-height: 1.4;
 }
 
 .text--light {
