--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,6 +7,8 @@ html {
   font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
   font-style: italic;
+  color: #999999;
+  line-height: 1.4;
 }
 
 .text--light {
@@ -962,6 +964,9 @@ body {
 .work-item--full {
   height: 100%;
 }
+.work-desc {
+  color: white;
+}
 @media screen and (max-width: 1600px) {
   .work-list {
     height: 60rem;
@@ -1056,4 +1061,81 @@ body {
 .work-item:hover .work-content {
   opacity: 1;
   visibility: visible;
+}
+
+.people {
+  padding: 10rem 0 3rem;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url("../images/img-people-bg.png") no-repeat center/cover;
+}
+.people-list {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 9rem;
+  padding: 0 4rem;
+}
+.people-item {
+  width: calc(50% - 4rem);
+  margin-bottom: 7rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.people-avatar {
+  width: 11.5rem;
+  height: 11.5rem;
+  border-radius: 100rem;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+.people-info {
+  padding-left: 3rem;
+}
+.people-name {
+  text-transform: uppercase;
+  margin-bottom: 1.5rem;
+  font-weight: 500;
+}
+.people-job {
+  display: inline-block;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  color: #333333;
+  position: relative;
+}
+.people-job::before {
+  content: "";
+  width: 6.5rem;
+  height: 4px;
+  background-color: #e98382;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.people-desc {
+  font-style: normal;
+  line-height: 1.4;
+}
+@media screen and (max-width: 1023px) {
+  .people {
+    padding: 5rem 0 1rem;
+  }
+  .people-item {
+    width: 100%;
+    margin-bottom: 4rem;
+  }
+}
+@media screen and (max-width: 767px) {
+  .people-list {
+    padding: 0;
+    margin-top: 4rem;
+  }
+  .people-avatar {
+    width: 8rem;
+    height: 8rem;
+  }
 }
