--- a/app/views/blocks/mixins.pug
+++ b/app/views/blocks/mixins.pug
@@ -71,3 +71,21 @@ mixin peopleItem(src="https://images.unsplash.com/photo-1533227268428-f9ed0900fb
 			h3.people-name= name
 			span.people-job.text.text--light= job
 			p.people-desc.text= desc
+
+mixin storyItem(src="./images/img-blog1.png", dateNumber = 15, dateText = "Jan", title="Lorem ipsum dolor sit amet consectetur adipisicing elit.", desc = "Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quidem nihil reprehenderit repudiandae aliquam, debitis magnam animi esse ipsam soluta non voluptas repellendus laboriosam totam sunt doloremque distinctio labore quas?", views = 1000, comments = 100)
+	li.story-item
+		.story-media
+			img.story-image(src= src)
+			.story-date
+				span.story-date-number= dateNumber
+				span.story-date-text.text.text--light= dateText
+		h3.story-title= title
+		.story-desc.text
+			p.story-desc-inner= desc
+		.story-meta
+			.story-meta-item
+				i.fa.fa-eye.story-meta-icon
+				span.story-meta-number.text= views
+			.story-meta-item
+				i.fa.fa-comment.story-meta-icon
+				span.story-meta-number.text= comments
