--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -9,5 +9,6 @@ block container
 	include blocks/quote
 	include blocks/team
 	include blocks/work
+	include blocks/testimonial
 	include blocks/people
 	include blocks/story
