--- a/app/views/blocks/about.pug
+++ b/app/views/blocks/about.pug
@@ -2,7 +2,19 @@ section.about
 	.container
 		+blockBox("What we do", "Story about us", "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste tempore ducimus aut minima ex. Eaque impedit, quasi sed cumque ex optio accusamus eius, quod obcaecati non delectus eos sequi laborum.")
 		.about-list 	
-			+aboutItem("../images/img-about1.png", "Supper Team", "about-icon")
-			+aboutItem("../images/img-about2.png", "Supper Team", "about-icon")
-			+aboutItem("../images/img-about3.png", "Supper Team", "about-icon")
+			+aboutItem({
+				src: "./images/img-about1.png",
+				title: "Super Team",
+				icon: "fa fa-users"
+			})
+			+aboutItem({
+				src: "./images/img-about2.png",
+				title: "Super Team",
+				icon: "fa fa-heart"
+			})
+			+aboutItem({
+				src: "./images/img-about3.png",
+				title: "Super Team",
+				icon: "fa fa-home"
+			})
 					
