--- a/app/styles/layout/_service.scss
+++ b/app/styles/layout/_service.scss
@@ -33,6 +33,15 @@
   }
   &-item-info {
     width: calc(100% - 9.5rem);
+    height: 100%;
+    // @include flexbox(flex-start, space-between, column);
+    @include flexbox2(
+      (
+        justify-content: space-between,
+        flex-direction: column,
+        align-items: flex-start
+      )
+    );
   }
   @include maxWidth(1023px) {
     padding: 5rem 0;
